# basecamp-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/basecamp_mcp/: __init__.py  auth.py  client.py  config.py  server.py
src/fga_basecamp_mcp/: __init__.py  auth.py  client.py  config.py  server.py
